--- a/index.html
+++ b/index.html
@@ -4,110 +4,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Illustrator</title>
 </head>
 
-<body>
-    <header>
-        <nav>
-            <a href="#">WHY?</a>
-            <a href="#">ILLUSTRATION</a>
-            <a href="#">BUY</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <article>
-                <h2>absurd illustrations that make sense</h2>
-                <p>What about absurd illustrations for your projects? Take every user on an individual journey through
-                    their own imagination.</p>
-                <div>
-                    <a href="#">Download</a>
-                    <a href="#">Subscribe</a>
-                </div>
-            </article>
-            <div>
-                <img src="./assets/img/illustration1.gif" alt="">
-            </div>
-        </section>
-        <section>
-            <div>
-                <img src="./assets/img/illustration2.png" alt="">
-            </div>
-            <article>
-                <h2>real beauty resides in imperfection</h2>
-                <p>In a digital era, we sometimes feel the need to interact with something more human that will make us
-                    appreciate both the beauty and the imperfection of something made by hand.</p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2>expressiveness is... the new black</h2>
-                <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and
-                    naivety.</p>
-            </article>
-            <div>
-                <img src="./assets/img/illustration3.png" alt="">
-            </div>
-        </section>
-        <section>
-            <h2>illustrations for applications</h2>
-            <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of the
-                way, beginning another chapter with each new phase of the project development. And who knows where it
-                will take us?</p>
-            <div>
-                <img src="./assets/img/illustration4.png" alt="">
-                <img src="./assets/img/illustration5.png" alt="">
-                <img src="./assets/img/illustration6.png" alt="">
-            </div>
-        </section>
-        <section>
-            <h2>examples of use</h2>
-            <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give it
-                its own meaning. It depends only on each one's creativity and free spirit.</p>
-            <article>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </article>
-        </section>
-        <section>
-            <h2>download illustration</h2>
-            <p>You're free to use these illustrations for both personal and commercial projects. And if you want to make
-                a human happy would be nice to give credits by mentioning this website or be my supporter. I have
-                created a membership plan for people who love my works and wish to support me and receive new artwork
-                regularly.</p>
-            <div>
-                <h3>membership</h3>
-                <h2>$57</h2>
-                <span>per year</span>
-                <p>No link required
-                    Unlimited access
-                    New content regularly
-                    Colored versions
-                    PNG format files
-                    SVG format files
-                    Premium support</p>
-                <a href="#">Become Member</a>
-            </div>
-        </section>
-    </main>
+<body id="dark">
+    <nav>
+        <ul>
+            <li><a href="#">Why?</a></li>
+            <li><a href="#">illustration</a></li>
+            <li><a href="#">buy</a></li>
+        </ul>
+    </nav>
+    <section class="lampe">
+        <article>
+            <h1>absurd illustrations that make sense</h1>
+            <p>What about absurd illustrations for your projects? Take every user on an individual journey through their
+                own
+                imagination.</p>
+            <p><a href="#" id="downloadLink">Download</a> &nbsp <a href="#">Subscribe</a></p>
+        </article>
+        <img src="./assets/img/illustration1.gif" alt="">
+    </section>
+    <section>
+        <img src="./assets/img/illustration2.png" alt="">
+        <article>
+            <h1>real beauty resides in imperfection</h1>
+            <p>In a digital era, we sometimes feel the need to interact with something more human that will make us
+                appreciate both the beauty and the imperfection of something made by hand.</p>
+        </article>
+    </section>
+    <section id="darkmodeBg">
+        <h1>expressiveness is... the new black</h1>
+        <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and naivety.
+        </p>
+    </section>
+    <section>
+        <h1>illustrations for applications</h1>
+        <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of the way,
+            beginning another chapter with each new phase of the project development. And who knows where it will take
+            us?</p>
+        <figure>
+            <img src="./assets/img/illustration4.png" id="fig1" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration5.png" id="fig2" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration6.png" id="fig3" alt="">
+        </figure>
+    </section>
+    <section>
+        <h1>examples of use</h1>
+        <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give it its
+            own meaning. It depends only on each one's creativity and free spirit.</p>
+        <figure>
+            <img src="./assets/img/illustration7.jpg" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration8.jpg" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration9.jpg" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration10.jpg" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration11.jpg" alt="">
+        </figure>
+        <figure>
+            <img src="./assets/img/illustration12.jpg" alt="">
+        </figure>
+    </section>
+    <section>
+        <h1>download illustrations</h1>
+        <p>You're free to use these illustrations for both personal and commercial projects. And if you want to make a
+            human happy would be nice to give credits by mentioning this website or be my supporter. I have created a
+            membership plan for people who love my works and wish to support me and receive new artwork regularly.</p>
+        <div>
+            <h2>membership</h2>
+            <h3>$57</h3>
+            <h4>per year</h4>
+            <ul>
+                <li>No link required</li>
+                <li>Unlimited access</li>
+                <li>New content regularly</li>
+                <li>Colored versions</li>
+                <li>PNG format files</li>
+                <li>SVG format files</li>
+                <li>Premium support</li>
+            </ul>
+            <a href="#">Become Member</a>
+        </div>
+    </section>
     <footer>
-        <h2>any absurd suggestions?</h2>
+        <h1>any absurd suggestions?</h1>
         <p>Email</p>
-        <a href="#">super@super.de</a>
+        <p><a href="super@super.de">super@super.de</a></p>
         <p>Follow me</p>
-        <nav>
-            <a href="">fb</a>
-            <a href="">ig</a>
-            <a href="">tw</a>
-            <a href="">yt</a>
-        </nav>
+        <p>
+            <a href="#">fb</a>
+            <a href="#">ig</a>
+            <a href="#">tw</a>
+            <a href="#">yt</a>
+        </p>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
